--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,30 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+
+<div>
+<% @trainer.pokemons.each do |a| %>
+  <div>
+  <% if @trainer.id == current_trainer.id or a.health > 0 %>
+  <%= 'Name' %>
+  <%= 'Level' %>
+  <%= 'Health' %>
+  </div>
+  <%= a.name %>
+  <%= a.level %>
+  <%= a.health %>
+
+  <% if @trainer.id == current_trainer.id and a.health < 100%>
+    <%= button_to "Heal!", heal_path(id: a, trainer_id: @trainer), :class => "button small", :method => :patch %>
+    <% end %>
+
+  <% if a.health > 0 %>
+  <%= button_to "Damage!", damage_path(id: a, trainer_id: @trainer), :class => "button small", :method => :patch %>
+    <% end %>
+  <% end %>
+  <% end %>
+</div>
+
+<% if @trainer.id == current_trainer[:id] %>
+  <%= button_to "Make a new Pokemon!", pokemon_new_path, :class => "button small", :method => :get %>
+  <% end %>
